--- a/labs/lab1/task2/build.gradle
+++ b/labs/lab1/task2/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'application'
     id 'java'
 }
 
@@ -11,7 +12,13 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    implementation 'com.google.guava:guava:30.1.1-jre'
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+}
+
+application {
+    mainClassName = 'com.app.App'
 }
 
 test {
