--- a/labs/lab9/build.gradle
+++ b/labs/lab9/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
 
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
     testImplementation 'org.testng:testng:7.4.0'
